welcome.lessons.welcome.bat.bool1.HasTeen.scala.error
hasTeen:8: error: not found: value compteur
  compteur=0
  ^hasTeen:10: error: not found: value compteur
    compteur=compteur+1}
    ^hasTeen:12: error: not found: value compteur
    compteur=compteur+1}
    ^hasTeen:14: error: not found: value compteur
    compteur=compteur+1}
    ^hasTeen:15: error: not found: value compteur
  if (compteur >= 2) {
      ^